--- a/Web/hearts/heart.html
+++ b/Web/hearts/heart.html
@@ -212,7 +212,7 @@
             }
             context.closePath();
             // create the fill
-            context.fillStyle = '#ea80b0';
+            context.fillStyle = '#e03969';
             context.fill();
             // create the image
             var image = new Image();
